--- a/htmlq1.html
+++ b/htmlq1.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="htmlquiz1.css">
 </head>
 <body>
-<h4>Question 1 <sub>(Hardware)</sub></h4>
+<h4>Question 1</h4>
 <h4>Which of the following is an input device?</h4>
 <ol type=”A”>
     <h5><li>Fan</li></h5>
