--- a/htmlq2.html
+++ b/htmlq2.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="htmlquiz2.css">
 </head>
 <body>
-<h1>Question 2 <sub>(HTML)</sub></h1>
+<h1>Question 2</h1>
 <h2>Which one of these is the biggest header?</h2>
 <ol type=”A”>
     <h3><li>h1</li></h3>
